feat: completed calendar initialization, displaying weekdays, and displaying month days, implemented month and year switching

--- a/src/widgets/DatePicker/styles/DatePicker.scss
+++ b/src/widgets/DatePicker/styles/DatePicker.scss
@@ -8,8 +8,9 @@
 .date-picker__input {
 }
 
-.date-picker__calendar {
+.date-picker__body {
     position: absolute;
     top: 100%;
     left: 0;
+    background-color: var(--date-picker-primary-bg-color);
 }
