--- a/src/widgets/DatePicker/styles/DatePickerVar.scss
+++ b/src/widgets/DatePicker/styles/DatePickerVar.scss
@@ -15,7 +15,8 @@
 }
 
 .date-picker_light {
-    --date-picker-primary-bg-color: #f9f9f9;
+    --date-picker-primary-bg-color: #cccccc;
+    --date-picker-secondary-bg-color: #ffffff;
     --date-picker-primary-color: #ff571a;
     --date-picker-secondary-color: #ff4400;
     --date-picker-tertiary-color: #424242;
