--- a/src/widgets/DatePicker/components/DatePickerBody/components/NavigationBar/styles/NavigationBar.scss
+++ b/src/widgets/DatePicker/components/DatePickerBody/components/NavigationBar/styles/NavigationBar.scss
@@ -1,22 +1,43 @@
 .navigation-bar {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 5px 10px;
 }
 
 .navigation-bar__nav-item {
     display: flex;
     align-items: center;
 }
+
+.navigation-bar__nav-item:first-child .navigation-bar__nav-btn:first-child {
+    margin-right: 10px;
+}
+
+.navigation-bar__nav-item:last-child .navigation-bar__nav-btn:first-child {
+    margin-right: 10px;
+}
+
 .navigation-bar__nav-btn {
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 30px;
+    height: 30px;
     color: var(--date-picker-primary-color);
+    font-size: var(--date-picker-text-l-size);
 }
 
 .navigation-bar__nav-btn-icon {
+    width: 100%;
+    height: 100%;
 }
+
 .navigation-bar__date {
+    font-size: var(--date-picker-text-l-size);
+}
+
+.navigation-bar__date-value {
+    text-transform: uppercase;
 }
